# gnu_heating-master

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  LICENSE.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  README.txt  TODO  acinclude.m4  aclocal.m4  configure  configure.ac  install.sh
.heating-master/: config.json  style.css
config/: style.css
src/: Makefile.am  Makefile.in
src/cmdline/: main.cpp
src/core/: heatingMaster.cpp  heatingMaster.hpp  jsonaux.cpp  jsonaux.hpp  thermostat.cpp  thermostat.hpp  thermostatObserver.hpp
src/gui/: guiMain.cpp  guiMain.hpp  mainButton.cpp  mainButton.hpp  mainWindow.cpp  mainWindow.hpp  thermostatWindow.cpp  thermostatWindow.hpp
